# EmbGen

./: .gitmodules  CMakeLists.txt  README.md  template.ino
ext/: CMakeLists.txt
include/EmbGen/: EmbGen.hpp  Utils.hpp
parser/: CMakeLists.txt
parser/include/EmbGen/: Appendage.hpp  Code.hpp  Command.hpp  Exceptions.hpp  Include.hpp  Loop.hpp  Parameter.hpp  Setup.hpp  Stop.hpp  Variable.hpp  XmlElement.hpp
parser/include/EmbGen/Parser/: Appendage.hpp  Code.hpp  Command.hpp  Parameter.hpp  Variable.hpp  XmlElement.hpp
parser/src/: Appendage.cpp  Code.cpp  Command.cpp  Include.cpp  Loop.cpp  Parameter.cpp  Setup.cpp  Stop.cpp  Variable.cpp  XmlElement.cpp
parser/test/: Appendage.cpp  Code.cpp  Command.cpp  Include.cpp  Loop.cpp  Parameter.cpp  Setup.cpp  Stop.cpp  Variable.cpp  XmlElement.cpp
src/: Appendage.cpp  EmbGen.cpp  Main.cpp
test/: EmbGen.cpp
test/data/appendages/: Command.xml  Everything.xml  Include.xml  Loop.xml  Stop.xml  Variable.xml
travis/: before_script.sh  script.sh
